--- a/index.html
+++ b/index.html
@@ -215,6 +215,17 @@
         rerum!lorem5
     </div>
 
+    <script>
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('service-worker.js')
+            .then(registration => {
+              console.log('Service worker registered:', registration);
+            })
+            .catch(error => {
+              console.error('Service worker registration failed:', error);
+            });
+        }
+      </script>
 </body>
 
 </html>
