--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <title>PWA APP</title>
+    <base href="https://natalia-orlova.github.io/btnUp/">
 </head>
 
 <body>
