--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <base>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <title>PWA APP</title>
-    <base href="https://natalia-orlova.github.io/btnUp/">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
+<link rel="manifest" href="manifest.json">
+<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+<title>PWA APP</title>
+<base href="https://natalia-orlova.github.io/btnUp/">
 </head>
 
 <body>
@@ -152,7 +152,8 @@
         voluptatibus aliquam similique doloremque, fugiat vitae commodi voluptatem nihil incidunt! Voluptas dolorem et
         quidem! Magnam hic quam nobis vel voluptate. Aspernatur, molestias. Asperiores quo velit iusto dolorum minima ut
         iste quaerat tempore, fuga commodi, eum temporibus exercitationem delectus, minus et placeat eius nihil
-        rerum!lorem5veritatis eaque fugit dolorem unde aliquid ipsam saepe harum quas placeat corrupti at voluptate modi tenetur,
+        rerum!lorem5veritatis eaque fugit dolorem unde aliquid ipsam saepe harum quas placeat corrupti at voluptate modi
+        tenetur,
         assumenda nobis? Consectetur libero voluptas deleniti adipisci neque voluptate pariatur. Placeat reiciendis
         suscipit repellendus eaque corrupti et tempora sint debitis ipsum quidem nobis sed aperiam voluptas, tenetur
         eius natus quaerat architecto? Quasi delectus asperiores doloremque quaerat, id magnam veritatis, fuga odio
@@ -189,9 +190,9 @@
         Architecto, provident? Explicabo maiores necessitatibus reprehenderit eveniet esse autem corrupti perferendis
         qui mollitia libero optio, sunt, nihil, itaque exercitationem vero ut nemo voluptate. Accusantium animi ullam
         veritatis eaque fugit dolorem unde aliquid ipsam saepe harum quas placeat corrupti at voluptate modi tenetur,
-        assumenda nobis? Consectetur libero 
+        assumenda nobis? Consectetur libero
         https://h7team.ru/item/285/
-        
+
         voluptas deleniti adipisci neque voluptate pariatur. Placeat reiciendis
         suscipit repellendus eaque corrupti et tempora sint debitis ipsum quidem nobis sed aperiam voluptas, tenetur
         eius natus quaerat architecto? Quasi delectus asperiores doloremque quaerat, id magnam veritatis, fuga odio
@@ -218,15 +219,15 @@
 
     <script>
         if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('service-worker.js')
-            .then(registration => {
-              console.log('Service worker registered:', registration);
-            })
-            .catch(error => {
-              console.error('Service worker registration failed:', error);
-            });
+            navigator.serviceWorker.register('service-worker.js')
+                .then(registration => {
+                    console.log('Service worker registered:', registration);
+                })
+                .catch(error => {
+                    console.error('Service worker registration failed:', error);
+                });
         }
-      </script>
+    </script>
 </body>
 
 </html>
