--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
             });
         }
 
-        const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
-        if (localStorage.getItem('appInstalled') === 'true' || standaloneMediaQuery.matches) {
-            // Скрыть кнопку, если приложение уже установлено
-            installButton.style.display = 'none';
-        }
+        // const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
+        // if (localStorage.getItem('appInstalled') === 'true' || standaloneMediaQuery.matches) {
+        //     // Скрыть кнопку, если приложение уже установлено
+        //     installButton.style.display = 'none';
+        // }
 
         // if (standaloneMediaQuery.matches) {
         //     // Скрыть кнопку, если приложение запущено в standalone-режиме
