--- a/index.html
+++ b/index.html
@@ -232,41 +232,47 @@
         const installButton = document.querySelector('button');
 
         // Проверяем, поддерживает ли браузер PWA
-        if ('serviceWorker' in navigator && 'BeforeInstallPromptEvent' in window) {
-            // Создаем кнопку для установки приложения
-            // const installButton = document.querySelector('button');
-            // installButton.textContent = 'Установить приложение';
-            // document.body.appendChild(installButton);
+        // if ('serviceWorker' in navigator && 'BeforeInstallPromptEvent' in window) {
+        //     // Создаем кнопку для установки приложения
+        //     // const installButton = document.querySelector('button');
+        //     // installButton.textContent = 'Установить приложение';
+        //     // document.body.appendChild(installButton);
 
-            // Добавляем обработчик события beforeinstallprompt
-            window.addEventListener('beforeinstallprompt', (event) => {
-                // Отменяем событие, чтобы предотвратить автоматическое отображение диалога установки
-                event.preventDefault();
+        //     // Добавляем обработчик события beforeinstallprompt
+        //     window.addEventListener('beforeinstallprompt', (event) => {
+        //         // Отменяем событие, чтобы предотвратить автоматическое отображение диалога установки
+        //         event.preventDefault();
 
-                // Показываем кнопку для установки приложения
-                installButton.style.display = 'block';
+        //         // Показываем кнопку для установки приложения
+        //         installButton.style.display = 'block';
 
-                // Добавляем обработчик клика на кнопку
-                installButton.addEventListener('click', () => {
-                    // Отображаем диалог установки приложения
-                    event.prompt();
+        //         // Добавляем обработчик клика на кнопку
+        //         installButton.addEventListener('click', () => {
+        //             // Отображаем диалог установки приложения
+        //             event.prompt();
 
-                    // Скрыть кнопку после установки приложения
-                    installButton.style.display = 'none';
-                });
-            });
-        }
+        //             // Скрыть кнопку после установки приложения
+        //             installButton.style.display = 'none';
+        //         });
+        //     });
+        // }
 
-        // const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
-        // if (localStorage.getItem('appInstalled') === 'true' || standaloneMediaQuery.matches) {
+        // if (localStorage.getItem('appInstalled') === 'true') {
         //     // Скрыть кнопку, если приложение уже установлено
         //     installButton.style.display = 'none';
         // }
 
-        // if (standaloneMediaQuery.matches) {
-        //     // Скрыть кнопку, если приложение запущено в standalone-режиме
-        //     installButton.style.display = 'none';
-        // }
+
+        window.addEventListener('beforeinstallprompt', (e) => {
+            // Показываем кнопку только если условия для установки PWA выполнены
+            installButton.style.display = 'block';
+
+            // Обработчик клика по кнопке
+            installButton.addEventListener('click', () => {
+                // Запускаем установку приложения
+                e.prompt();
+            });
+        });
     </script>
 </body>
 
