--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
             installButton.addEventListener('click', () => {
                 // Запускаем установку приложения
                 e.prompt();
+                installButton.style.display = 'none';
             });
         });
     </script>
