--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             //     e.prompt();
             //     installButton.style.display = 'none';
             // });
-            installButton.addEventListener('click', (e) => {
+            installButton.addEventListener('click', () => {
                 // Запускаем установку приложения
                 e.prompt().then((result) => {
                     if (result.outcome === 'accepted') {
