--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     } else if (result.outcome === 'dismissed') {
                         // Пользователь отменил установку, оставляем кнопку активной
                         // ничего не делаем, кнопка остается активной
-                        return;
+                        console.log(result);
                     }
                 });
             });
@@ -296,10 +296,6 @@
             installButton.style.display = 'none';
         }
 
-        if (localStorage.getItem('appInstallCancelled') === 'true') {
-            installButton.style.display = 'block';
-            localStorage.removeItem('appInstallCancelled');
-        }
     </script>
 </body>
 
