--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     } else if (result.outcome === 'dismissed') {
                         // Пользователь отменил установку, оставляем кнопку активной
                         // ничего не делаем, кнопка остается активной
-                        console.log(result);
+                        installButton.style.display = 'block';
                     }
                 });
             });
