--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <title>Document</title>
 <link rel="stylesheet" href="style.css">
 <script src="script.js" defer></script>
+<meta property="og:image" content="images/android-chrome-256x256.png">
+<meta property="og:image:width" content="256">
+<meta property="og:image:height" content="256">
+<meta property="og:title" content="PWA APP">
+<meta property="og:description" content="Testing PWA application">
 <link rel="manifest" href="manifest.json">
 <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
