--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
     <button class="install-btn">Установить приложение</button>
+    <button id="install-btn" onclick="showInstructions()">Установить как приложение</button>
     <div class="content">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur esse excepturi est corporis reprehenderit
         ipsam omnis porro. Alias porro sed temporibus molestias quam sunt adipisci, quis ipsa dolorem modi officiis,
@@ -227,60 +228,28 @@
         const installButton = document.querySelector('button');
         let installEvent;
 
-        // window.addEventListener('beforeinstallprompt', (e) => {
-        //     // Показываем кнопку только если условия для установки PWA выполнены
-        //     installButton.style.display = 'block';
-        //     installEvent = e;
-        // });
+        /*Работает на Chrome, Microsoft Edge (версия 76 и выше), opera */
+        window.addEventListener('beforeinstallprompt', (e) => {
+            // Показываем кнопку только если условия для установки PWA выполнены
+            installButton.style.display = 'block';
+            installEvent = e;
+        });
 
-        // installButton.addEventListener('click', () => {
-        //     // Запускаем установку приложения
-        //     if (installEvent) {
-        //         installEvent.prompt().then((result) => {
-        //             if (result.outcome === 'accepted') {
-        //                 // Пользователь согласился на установку, скрываем кнопку
-        //                 installButton.style.display = 'none';
-        //             } else if (result.outcome === 'dismissed') {
-        //                 // Пользователь отменил установку, оставляем кнопку активной
-        //                 // ничего не делаем, кнопка остается активной
-        //                 installButton.style.display = 'block';
-        //             }
-        //         });
-        //     }
-        // });
-
-
-        // Проверяем, поддерживает ли браузер событие установки приложения (beforeinstallprompt)
-        if ('onbeforeinstallprompt' in window) {
-            window.addEventListener('beforeinstallprompt', (e) => {
-                e.preventDefault(); // Предотвращаем отображение стандартного приглашения браузера
-                installEvent = e;
-
-                // Показываем кнопку только если условия для установки PWA выполнены
-                installButton.style.display = 'block';
-            });
-
-            installButton.addEventListener('click', () => {
-                // Запускаем установку приложения
-                if (installEvent) {
-                    installEvent.prompt()
-                        .then((choice) => {
-                            if (choice.outcome === 'accepted') {
-                                // Пользователь согласился на установку, скрываем кнопку
-                                installButton.style.display = 'none';
-                                installEvent = null;
-                            } else {
-                                // Пользователь отменил установку или что-то пошло не так
-                                // Можно оставить кнопку активной или выполнить другие действия
-                                console.log('Установка PWA отменена или произошла ошибка');
-                            }
-                        });
-                }
-            });
-        } else {
-            // Если браузер не поддерживает установку PWA, скрываем кнопку
-            installButton.style.display = 'none';
-        } 
+        installButton.addEventListener('click', () => {
+            // Запускаем установку приложения
+            if (installEvent) {
+                installEvent.prompt().then((result) => {
+                    if (result.outcome === 'accepted') {
+                        // Пользователь согласился на установку, скрываем кнопку
+                        installButton.style.display = 'none';
+                    } else if (result.outcome === 'dismissed') {
+                        // Пользователь отменил установку, оставляем кнопку активной
+                        // ничего не делаем, кнопка остается активной
+                        installButton.style.display = 'block';
+                    }
+                });
+            }
+        });
 
 
         const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
@@ -288,6 +257,10 @@
             // Скрыть кнопку, если приложение запущено в standalone-режиме
             installButton.style.display = 'none';
         }
+
+        function showInstructions() {
+            alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2.Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
+}
 
     </script>
 </body>
