--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
         });
 
         if (navigator.userAgent.includes('Firefox')) {
+            console.log("firefox");
             installButton.style.display = 'block';
             installButton.addEventListener('click', () => {
                 console.log('кнопка в мозиле');
