--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
             alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2.Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
         }
 
+        if ('serviceWorker' in navigator && 'PushManager' in window) {
+            console.log("PWA ok");
+        }
     </script>
 </body>
 
