--- a/index.html
+++ b/index.html
@@ -226,35 +226,32 @@
 
     <script>
         const installButton = document.querySelector('button');
-        // let installEvent;
+        let installEvent;
 
         /*Работает на Chrome, Microsoft Edge (версия 76 и выше) */
         window.addEventListener('beforeinstallprompt', (e) => {
             // Показываем кнопку только если условия для установки PWA выполнены
             installButton.style.display = 'block';
-            window.installEvent = e;
+            installEvent = e;
         });
 
-        // installButton.addEventListener('click', () => {
-        //     // Запускаем установку приложения
-        //     if (installEvent) {
-        //         installEvent.prompt().then((result) => {
-        //             if (result.outcome === 'accepted') {
-        //                 // Пользователь согласился на установку, скрываем кнопку
-        //                 installButton.style.display = 'none';
-        //             } else if (result.outcome === 'dismissed') {
-        //                 // Пользователь отменил установку, оставляем кнопку активной
-        //                 // ничего не делаем, кнопка остается активной
-        //                 installButton.style.display = 'block';
-        //             }
-        //         });
-        //     }
-        // });
-
         installButton.addEventListener('click', () => {
-                console.log('кнопка в мозиле');
-                window.installEvent.prompt();
-        })
+            // Запускаем установку приложения
+            if (installEvent) {
+                installEvent.prompt().then((result) => {
+                    if (result.outcome === 'accepted') {
+                        // Пользователь согласился на установку, скрываем кнопку
+                        installButton.style.display = 'none';
+                    } else if (result.outcome === 'dismissed') {
+                        // Пользователь отменил установку, оставляем кнопку активной
+                        // ничего не делаем, кнопка остается активной
+                        installButton.style.display = 'block';
+                    }
+                });
+            }
+        });
+
+       
 
         // if (navigator.userAgent.includes('Firefox')) {
         //     console.log("firefox");
