--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@
             // Показываем кнопку только если условия для установки PWA выполнены
             installButton.style.display = 'block';
             installEvent = e;
+            e.preventDefault();
+            showInAppInstallPromotion();
         });
 
         // installButton.addEventListener('click', () => {
@@ -251,40 +253,75 @@
         //     }
         // });
 
-        installButton.addEventListener('click', () => {
-            installEvent.prompt();
-            installEvent.userChoice.then((choiceResult) => {
-                if (choiceResult.outcome === 'accepted') {
-                    console.log('User accepted the install prompt');
-                    installButton.style.display = 'none';
-                } else {
-                    console.log('User dismissed the install prompt');
-                }
-            })
-        })
+        // installButton.addEventListener('click', () => {
+        //     installEvent.prompt();
+        //     installEvent.userChoice.then((choiceResult) => {
+        //         if (choiceResult.outcome === 'accepted') {
+        //             console.log('User accepted the install prompt');
+        //             installButton.style.display = 'none';
+        //         } else {
+        //             console.log('User dismissed the install prompt');
+        //         }
+        //     })
+        // })
 
+        function showInAppInstallPromotion() {
+            // Create a custom dialog window
+            const dialog = document.createElement('div');
+            dialog.innerHTML = `
+                <h2>Установить как приложение</h2>
+                <p>Вы хотите установить это приложение на свой домашний экран?</p>
+                <button id="install-accept">Установить</button>
+                <button id="install-cancel">Отмена</button>
+            `;
+            document.body.appendChild(dialog);
 
+            // Add event listeners to the buttons
+            document.getElementById('install-accept').addEventListener('click', () => {
+                installEvent.prompt();
+            });
 
-            // if (navigator.userAgent.includes('Firefox')) {
-            //     console.log("firefox");
-            //     installButton.style.display = 'block';
-            //     installButton.addEventListener('click', () => {
-            //         console.log('кнопка в мозиле');
-            //         window.installEvent.prompt();
-            //         navigator.mozillaAddToHomescreen({
-            //             url: window.location.href,
-            //             title: document.title,
-            //             iconUrl: 'icon-192x192.png',
-            //             manifestUrl: 'manifest.json'
-            //         });
-            //     });
-            // }
+            document.getElementById('install-cancel').addEventListener('click', () => {
+                dialog.remove();
+            });
+        }
 
-            const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
-            if (standaloneMediaQuery.matches) {
-                // Скрыть кнопку, если приложение запущено в standalone-режиме
-                installButton.style.display = 'none';
+        function installPWA() {
+            if (installEvent) {
+                installEvent.prompt();
+                installEvent.userChoice.then((choiceResult) => {
+                    if (choiceResult.outcome === 'accepted') {
+                        console.log('Пользователь подтвердил установку приложения');
+                        installButton.style.display = 'none';
+                    } else {
+                        console.log('Пользователь отменил установку приложения');
+                    }
+                });
             }
+        }
+
+        installButton.addEventListener('click', installPWA);
+
+        // if (navigator.userAgent.includes('Firefox')) {
+        //     console.log("firefox");
+        //     installButton.style.display = 'block';
+        //     installButton.addEventListener('click', () => {
+        //         console.log('кнопка в мозиле');
+        //         window.installEvent.prompt();
+        //         navigator.mozillaAddToHomescreen({
+        //             url: window.location.href,
+        //             title: document.title,
+        //             iconUrl: 'icon-192x192.png',
+        //             manifestUrl: 'manifest.json'
+        //         });
+        //     });
+        // }
+
+        const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
+        if (standaloneMediaQuery.matches) {
+            // Скрыть кнопку, если приложение запущено в standalone-режиме
+            installButton.style.display = 'none';
+        }
     </script>
 </body>
 
