--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             // Показываем кнопку только если условия для установки PWA выполнены
             installButton.style.display = 'block';
             installEvent = e;
-            installPWA;
+            installPWA();
         });
 
         function installPWA() {
@@ -252,7 +252,7 @@
             }
         }
 
-        installButton.addEventListener('click', installPWA);
+        installButton.addEventListener('click', installPWA());
 
         // if (navigator.userAgent.includes('Firefox')) {
         //     console.log("firefox");
