--- a/index.html
+++ b/index.html
@@ -235,7 +235,23 @@
             installEvent = e;
         });
 
-        function installPWA() {
+        // function installPWA() {
+        //     // Запускаем установку приложения
+        //     if (installEvent) {
+        //         installEvent.prompt().then((result) => {
+        //             if (result.outcome === 'accepted') {
+        //                 // Пользователь согласился на установку, скрываем кнопку
+        //                 installButton.style.display = 'none';
+        //             } else if (result.outcome === 'dismissed') {
+        //                 // Пользователь отменил установку, оставляем кнопку активной
+        //                 // ничего не делаем, кнопка остается активной
+        //                 // installButton.style.display = 'block';
+        //             }
+        //         });
+        //     }
+        // }
+
+        installButton.addEventListener('click', () => {
             // Запускаем установку приложения
             if (installEvent) {
                 installEvent.prompt().then((result) => {
@@ -248,10 +264,8 @@
                         // installButton.style.display = 'block';
                     }
                 });
-            }
-        }
-
-        installButton.addEventListener('click', installPWA());
+            } else showInstructions();
+        });
 
         // if (navigator.userAgent.includes('Firefox')) {
         //     console.log("firefox");
@@ -278,6 +292,16 @@
             // Скрыть кнопку установки PWA
             installButton.style.display = 'none';
         });
+
+        function showInstructions() {
+            if (navigator.userAgent.includes('Safari')) {
+                alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
+            } else if (navigator.userAgent.includes('Opera')) {
+                alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Opera:\n\n1. Нажмите на иконку &laquo;⋮&raquo; в правом верхнем углу экрана.\n2. Выберите «Добавить в...» из списка опций.\n3. Выберите «Главный экран");
+            } else if (navigator.userAgent.includes('Firefox')) {
+                alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Firefox:\n\n1. Нажмите на иконку &laquo;⋮&raquo; в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
+            }
+}
     </script>
 </body>
 
