--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
         });
 
         function showInstructions() {
+            installButton.style.display = 'block';
             if (navigator.userAgent.includes('Safari')) {
                 alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
             } else if (navigator.userAgent.includes('OPR') || navigator.userAgent.includes('Opera')) {
@@ -301,7 +302,7 @@
             } else if (navigator.userAgent.includes('Firefox')) {
                 alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Firefox:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
             }
-}
+        }
     </script>
 </body>
 
