--- a/index.html
+++ b/index.html
@@ -228,51 +228,65 @@
         const installButton = document.querySelector('button');
         let installEvent;
 
-        /*Работает на Chrome, Microsoft Edge (версия 76 и выше) */
-        window.addEventListener('beforeinstallprompt', (e) => {
-            // Показываем кнопку только если условия для установки PWA выполнены
-            installButton.style.display = 'block';
-            installEvent = e;
-        });
-
-        installButton.addEventListener('click', () => {
-            // Запускаем установку приложения
-            if (installEvent) {
-                installEvent.prompt().then((result) => {
-                    if (result.outcome === 'accepted') {
-                        // Пользователь согласился на установку, скрываем кнопку
-                        installButton.style.display = 'none';
-                    } else if (result.outcome === 'dismissed') {
-                        // Пользователь отменил установку, оставляем кнопку активной
-                        // ничего не делаем, кнопка остается активной
-                        // installButton.style.display = 'block';
-                    }
-                });
-            } else showInstructions();
-        });
-
-
-        function showInstructions() {
-            installButton.style.display = 'block';
-            if (navigator.userAgent.includes('Safari')) {
-                alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
-            } else if (navigator.userAgent.includes('OPR') || navigator.userAgent.includes('Opera')) {
-                installEvent.preventDefault();
-                alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Opera:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «Добавить в...» из списка опций.\n3. Выберите «Главный экран");
-            } else if (navigator.userAgent.includes('Firefox')) {
-                alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Firefox:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
-            }
+        /**
+        * проверка, с мобильного устройства или нет зашел пользователь
+        */
+        function isMobileDevice() {
+            return window.innerWidth <= 768;
         }
 
-        window.addEventListener('appinstalled', () => {
-            // Скрыть кнопку установки PWA
-            installButton.style.display = 'none';
-        });
+        if (isMobileDevice()) {
+            console.log("Пользователь на мобильном устройстве 📱");
 
-        const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
-        if (standaloneMediaQuery.matches) {
-            // Скрыть кнопку, если приложение запущено в standalone-режиме
-            installButton.style.display = 'none';
+            /*Работает на Chrome, Microsoft Edge (версия 76 и выше) */
+            window.addEventListener('beforeinstallprompt', (e) => {
+                // Показываем кнопку только если условия для установки PWA выполнены
+                installButton.style.display = 'block';
+                installEvent = e;
+            });
+
+            installButton.addEventListener('click', () => {
+                // Запускаем установку приложения
+                if (installEvent) {
+                    installEvent.prompt().then((result) => {
+                        if (result.outcome === 'accepted') {
+                            // Пользователь согласился на установку, скрываем кнопку
+                            installButton.style.display = 'none';
+                        } else if (result.outcome === 'dismissed') {
+                            // Пользователь отменил установку, оставляем кнопку активной
+                            // ничего не делаем, кнопка остается активной
+                            // installButton.style.display = 'block';
+                        }
+                    });
+                } else showInstructions();
+            });
+
+
+            function showInstructions() {
+                installButton.style.display = 'block';
+                if (navigator.userAgent.includes('Safari')) {
+                    alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
+                } else if (navigator.userAgent.includes('OPR') || navigator.userAgent.includes('Opera')) {
+                    alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Opera:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «Добавить в...» из списка опций.\n3. Выберите «Главный экран");
+                } else if (navigator.userAgent.includes('Firefox')) {
+                    alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Firefox:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
+                }
+            }
+
+            window.addEventListener('appinstalled', () => {
+                // Скрыть кнопку установки PWA
+                installButton.style.display = 'none';
+            });
+
+            const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
+            if (standaloneMediaQuery.matches) {
+                // Скрыть кнопку, если приложение запущено в standalone-режиме
+                installButton.style.display = 'none';
+            }
+
+
+        } else {
+            console.log("00000000000");
         }
     </script>
 </body>
