--- a/index.html
+++ b/index.html
@@ -237,11 +237,12 @@
 
         if (isMobileDevice()) {
             console.log("Пользователь на мобильном устройстве 📱");
+            installButton.style.display = 'block';
 
             /*Работает на Chrome, Microsoft Edge (версия 76 и выше) */
             window.addEventListener('beforeinstallprompt', (e) => {
                 // Показываем кнопку только если условия для установки PWA выполнены
-                installButton.style.display = 'block';
+                // installButton.style.display = 'block';
                 installEvent = e;
             });
 
@@ -263,7 +264,6 @@
 
 
             function showInstructions() {
-                installButton.style.display = 'block';
                 if (navigator.userAgent.includes('Safari')) {
                     alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
                 } else if (navigator.userAgent.includes('OPR') || navigator.userAgent.includes('Opera')) {
