--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             function showInstructions() {
                 if (navigator.userAgent.includes('Safari')) {
                     alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
-                } else if (navigator.userAgent.includes('OPR') || navigator.userAgent.includes('Opera')) {
+                } else if (navigator.userAgent.includes('OPR')) {
                     alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Opera:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «Добавить в...» из списка опций.\n3. Выберите «Главный экран");
                 } else if (navigator.userAgent.includes('Firefox')) {
                     alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Firefox:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
