--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
 
 
             function showInstructions() {
-                if (navigator.userAgent.includes('Safari')) {
+                if (navigator.vendor === 'Apple Computer, Inc.' && navigator.renderer === 'WebKit') {
                     alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве iOS через Safari:\n\n1. Нажмите на кнопку «Поделиться» внизу экрана.\n2. Выберите «Добавить на экран Домой» из списка опций.\n3. Нажмите «Добавить» в правом верхнем углу.");
-                } else if (navigator.userAgent.includes('OPR')) {
+                } else if (navigator.vendor === 'Opera Software ASA' && navigator.renderer === 'Blink') {
                     alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Opera:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «Добавить в...» из списка опций.\n3. Выберите «Главный экран");
-                } else if (navigator.userAgent.includes('Firefox')) {
+                } else if (navigator.vendor === 'Mozilla' && navigator.renderer === 'Gecko') {
                     alert("Пожалуйста, следуйте этим шагам для установки приложения на вашем устройстве через Firefox:\n\n1. Нажмите на иконку « ⋮ » в правом верхнем углу экрана.\n2. Выберите «На домашний экран»");
                 }
             }
